--- a/ui/less/general.less
+++ b/ui/less/general.less
@@ -109,3 +109,16 @@
 .shrinkable() {
   flex-shrink: 1;
 }
+
+.opacity-transition() {
+  /* Transparent unless explicitly made opaque through
+   "shown=true" attribute */
+  opacity: 0;
+
+  /* When we show/hide this, do it gradually using cubic-bezier timing. */
+  transition: opacity cubic-bezier(0.4, 0, 0.6, 1) 600ms;
+
+  &[shown="true"] {
+    opacity: 1;
+  }
+}
