--- a/ui/less/range_elements.less
+++ b/ui/less/range_elements.less
@@ -179,3 +179,7 @@
 .shaka-range-element {
   .range-element();
 }
+
+.shaka-seek-bar-container {
+  .opacity-transition();
+}
